新增了关于我们页面，和修改了部分样式。

--- a/诺立美/index.html
+++ b/诺立美/index.html
@@ -35,8 +35,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right my-nav">
-                    <li class="active"><a href="#">首页</a></li>
-                    <li><a href="#">关于诺立美</a></li>
+                    <li><a href="#">首页</a></li>
+                    <li><a href="about.html">关于诺立美</a></li>
                     <li><a href="#">最新动态</a></li>
                     <li><a href="show.html">产品展示</a></li>
                     <li><a href="#">专业课堂</a></li>
@@ -132,10 +132,10 @@
     </script>
     <script>
         $(function () {
-            $('.collapsed').click(function(){
-                $('.carousel').css('top','0px')
-            }).mouseleave(function(){
-                $('.carousel').css('top','-120px');
+            $('.collapsed').click(function () {
+                $('.carousel').css('top', '0px')
+            }).mouseleave(function () {
+                $('.carousel').css('top', '-120px');
             });
         })
     </script>
