--- a/诺立美/show.html
+++ b/诺立美/show.html
@@ -37,8 +37,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right my-nav">
-                        <li class="active"><a href="#">首页</a></li>
-                        <li><a href="index.html">关于诺立美</a></li>
+                        <li><a href="index.html">首页</a></li>
+                        <li><a href="about.html">关于诺立美</a></li>
                         <li><a href="#">最新动态</a></li>
                         <li><a href="#">产品展示</a></li>
                         <li><a href="#">专业课堂</a></li>
