--- a/诺立美/show.html
+++ b/诺立美/show.html
@@ -39,7 +39,7 @@
                     <ul class="nav navbar-nav navbar-right my-nav">
                         <li><a href="index.html">首页</a></li>
                         <li><a href="about.html">关于诺立美</a></li>
-                        <li><a href="#">最新动态</a></li>
+                        <li><a href="dynamicv.html">最新动态</a></li>
                         <li><a href="#">产品展示</a></li>
                         <li><a href="#">专业课堂</a></li>
                         <form class="navbar-form navbar-right">
